# MarkView

./: .gitignore  LICENSE  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  global.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: config.rs  export.rs  fs.rs  git.rs  graph.rs  schema.rs  search.rs  templates.rs
src-tauri/templates/: adr.md.tera  design.md.tera  requirement.md.tera  spec.md.tera  task.md.tera
src/app/: App.tsx  providers.tsx
src/app/components/layout/: EditorPane.tsx  GitPanel.tsx  GraphPanel.tsx  PreviewPane.tsx  RightSidebar.tsx  SearchPanel.tsx  Sidebar.tsx  SplitView.tsx  StatusBar.tsx  TemplatePanel.tsx
src/components/ui/: CommandPalette.tsx  checkbox.tsx  input.tsx  select.tsx  sonner.tsx  tabs.tsx  textarea.tsx  toaster.tsx
src/hooks/: index.ts  use-toast.ts
src/lib/: markdown-it-wikilink.ts  utils.ts
src/services/: api.ts  markdown.ts  wikiLinks.ts
src/store/: fileStore.ts  searchStore.ts  uiStore.ts
src/types/: index.ts  markdown-it-plugins.d.ts
src/utils/: date.ts  frontmatter.ts  index.ts  paths.ts  wikiLinks.ts
